--- a/env.example
+++ b/env.example
@@ -1,4 +1,18 @@
-IP=127.0.0.1
-PORT=80
+# Database Configuration
 DB_ROOT_PASSWORD=password
 DB_NAME=wordpress
+
+# Cloudflare Zero Trust Configuration
+CLOUDFLARE_TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
+
+# Domain Configuration
+WORDPRESS_DOMAIN=your-wordpress-domain.com
+PMA_DOMAIN=your-pma-domain.com
+
+# Traefik Port Configuration (outer ports to avoid conflicts)
+TRAEFIK_PORT=8080
+TRAEFIK_PMA_PORT=8081
+
+# Legacy IP/PORT (kept for compatibility, but not used with Cloudflare Zero Trust)
+IP=127.0.0.1
+PORT=80
