--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - "--api=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
-      - "--entrypoints.wordpress.address=:8080"
+      - "--entrypoints.web.address=:8080"
       - "--entrypoints.pma.address=:8081"
     ports:
       - "${TRAEFIK_PORT:-8080}:8080"
@@ -49,13 +49,14 @@ services:
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - wordpress-network
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.wordpress.rule=Host(`${WORDPRESS_DOMAIN}`)"
-      - "traefik.http.routers.wordpress.entrypoints=wordpress"
+      - "traefik.http.routers.wordpress.entrypoints=web"
       - "traefik.http.services.wordpress.loadbalancer.server.port=80"
 
   wpcli:
@@ -69,8 +70,10 @@ services:
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
     depends_on:
-      - db
-      - wp
+      db:
+        condition: service_healthy
+      wp:
+        condition: service_started
     networks:
       - wordpress-network
 
@@ -108,3 +111,9 @@ services:
       MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
     networks:
       - wordpress-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_ROOT_PASSWORD}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
