--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     image: wordpress:latest # https://hub.docker.com/_/wordpress/
     volumes:
       - ./config/wp_php.ini:/usr/local/etc/php/conf.d/conf.ini
+      - ./config/apache2.conf:/etc/apache2/conf-available/servername.conf
       - ./wp-app:/var/www/html # Full wordpress project
       #- ./plugin-name/trunk/:/var/www/html/wp-content/plugins/plugin-name # Plugin development
       #- ./theme-name/trunk/:/var/www/html/wp-content/themes/theme-name # Theme development
@@ -58,6 +59,11 @@ services:
       - "traefik.http.routers.wordpress.rule=Host(`${WORDPRESS_DOMAIN}`)"
       - "traefik.http.routers.wordpress.entrypoints=web"
       - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+    command: >
+      bash -c "
+      a2enconf servername &&
+      docker-entrypoint.sh apache2-foreground
+      "
 
   wpcli:
     image: wordpress:cli
@@ -76,6 +82,8 @@ services:
         condition: service_started
     networks:
       - wordpress-network
+    command: ["wp", "core", "version"]
+    restart: "no"
 
   pma:
     image: phpmyadmin:latest  # https://hub.docker.com/_/phpmyadmin
